Bug 617904 - Reset profile info in methodjit when tracejit is flushed (r=dmandelin)